--- a/config.toml
+++ b/config.toml
@@ -19,13 +19,12 @@ paginate = "10"
   opengraph = true # Enable OpenGraph if true
   schema = true # Enable Schema
   twitter_cards = false # Enable Twitter Cards if true
-  readmore = false # Show "Read more" button in list if true
+  readmore = true # Show "Read more" button in list if true
   authorbox = true # Show authorbox at bottom of pages if true
   toc = true # Enable Table of Contents
   pager = true # Show pager navigation (prev/next links) at the bottom of pages if true
   post_meta = ["date", "author", "categories", "translations"] # Order of post meta information
-  #mainSections = ["post", "blog", "news"] # Specify section pages to show on home page and the "Recent articles" widget
-  mainSections = ["blog"] # Specify section pages to show on home page and the "Recent articles" widget
+  mainSections = ["posts"] # Specify section pages to show on home page and the "Recent articles" widget
   dateformat = "2006-01-02" # Change the format of dates
   mathjax = true # Enable MathJax
   mathjaxPath = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js" # Specify MathJax path
